duplocale: fix missing locale magic when creating a new locale.

Fixes #18345.

Change-Id: Ibedfa973b371b65a502dc655eae65f4ed0833144
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6368
Reviewed-by: John Scipione <jscipione@gmail.com>
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>